# steamship-langchain

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  DEVELOPING.md  LICENSE  README.md  TESTING.md  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: publish-docs.yml  python-publish.yml  sphinx-publish.yml  test-main.yml
basic_examples/use_cases/basic/: after.py  before.py
basic_examples/use_cases/chatbot/: after.py  before.py
basic_examples/use_cases/vectorDBQA/: after.py  before.py
docs/: Makefile  README.md  conf.py  index.rst  requirements.txt  state_of_the_union.txt
docs/_static/css/: custom.css
docs/adapters/: agents.md  callbacks.rst  chains.md  document_loaders.rst  llms.rst  memory.md  memory.rst  prompts.md  vectorstores.rst
docs/adapters/llms/: llm_caching.ipynb  (+1 more)
docs/getting_started/: getting_started.md
docs/support/: coverage.md
docs/use_cases/: ask-my-book.py  ask-my-book_steamship.py  ask-my-book_steamship_package.py  chatgpt.ipynb  chatgpt.md  ingest.py  ingest_steamship.py  question_answering.md
example_translations/: README.md
examples/chatbot/: README.md
examples/greeting/: README.md
examples/qa_with_sources/: README.md
examples/self-ask-with-search/: README.md
examples/summarize-audio/: README.md
other_tests/: test_python_splitter.py
other_tests/assets/: splitter_test_file.py
other_tests/cache/: test_cache.py
other_tests/memory/: test_conversation_memory.py
src/steamship_langchain/: __init__.py  python_splitter.py
tests/: __init__.py  conftest.py  test_chat.py
tests/chat_models/: test_openai.py
tests/document_loaders/: test_steamship.py
tests/file_loaders/: test_directory.py  test_github.py  test_text.py  test_unstructured.py  test_youtube.py
tests/llms/: test_llms.py  test_openai.py
tests/memory/: test_conversation_memory.py
tests/tools/: test_search_tool.py  test_vectorstore.py
tests/utils/: client.py  fixtures.py
(+57 files in other folders)
